--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
     "zone.js": "~0.8.26"
