--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.17",
     "@ionic/pro": "2.0.3",
+    "@ionic/storage": "^2.2.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -35,7 +36,6 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
-    "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
     "zone.js": "~0.8.26"
   },
