--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ionic/angular": "4.0.0-beta.17",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^7.2.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
