--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ionic-native/base64": "^5.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/file": "^5.0.0",
+    "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
@@ -30,8 +33,11 @@
     "@ionic/storage": "^2.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^7.2.0",
+    "com-badrit-base64": "0.2.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -81,7 +87,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-telerik-imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
-      }
+      },
+      "com-badrit-base64": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "ios"
