--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ionic-native/base64": "^5.0.0",
+    "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
@@ -29,6 +30,7 @@
     "@ionic-native/keyboard": "^5.0.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
+    "@ionic-native/video-capture-plus": "^5.0.0",
     "@ionic/angular": "4.0.0-beta.17",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.2.0",
@@ -36,6 +38,8 @@
     "@ngrx/store": "^7.2.0",
     "com-badrit-base64": "0.2.0",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-transfer": "1.7.1",
@@ -44,6 +48,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "2.2.3",
+    "cordova-plugin-video-capture-plus": "1.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
@@ -90,7 +95,9 @@
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
       },
       "com-badrit-base64": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-camera": {},
+      "nl.x-services.plugins.videocaptureplus": {}
     },
     "platforms": [
       "ios"
