--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^7.2.0",
     "com-badrit-base64": "0.2.0",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
@@ -53,7 +53,8 @@
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
     "videogular2": "^6.4.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "nl.x-services.plugins.videocaptureplus": "~1.0.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
