--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
+    "nl.x-services.plugins.videocaptureplus": "~1.0.0",
     "videogular2": "^6.4.0",
-    "zone.js": "~0.8.26",
-    "nl.x-services.plugins.videocaptureplus": "~1.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
